c4prj1_deck/grade.txt
Grading at Sat Jul 20 16:54:36 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:184:31: error: expected ‘]’ before ‘)’ token
     card_t c = *(hand->cards[i));
                               ^
eval.c:184:32: error: expected ‘,’ or ‘;’ before ‘)’ token
     card_t c = *(hand->cards[i));
                                ^
Compilation of eval.c failed

Overall Grade: F
